@@ -149,6 +149,7 @@ class SharedEventSerializer(EventSerializer):
         del result['contexts']
         del result['user']
         del result['tags']
+        del result['sdk']
         result['entries'] = [
             e for e in result['entries']
             if e['type'] != 'breadcrumbs'
