@@ -45,5 +45,6 @@ class SharedEventSerializerTest(TestCase):
         assert result.get('contexts') is None
         assert result.get('user') is None
         assert result.get('tags') is None
+        assert 'sdk' not in result
         for entry in result['entries']:
             assert entry['type'] != 'breadcrumbs'
